--- a/Starter-file/sass/main.scss
+++ b/Starter-file/sass/main.scss
@@ -1,377 +1,287 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-/************VARIABLES*************/
-$primary_bleu-fonce: #1078A3;
-$primary_bleu-light: #2086b9;
-$primary_gris: #8d8a8a;
-$primary_blanc: #ffffff;
-$primary_noir: #000000;
-$primary_jaune: #F4CF1B;
-$primary_vert: #189118;
+@import 'https://fonts.googleapis.com/css2?family=Cairo:wght@700&family=Exo+2&display=swap';
 
-body {
-    font-family: 'cairo';
-    font-size: 16px;
-}
-
-.topbar {
-    width: 100%;
-    background: url("../img/blue.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.bar1 {
-    width: 100%;
-    &logo {
-        max-width:4%;
-        margin: 0.5% auto auto 2%;
-    }
-}
-.accl{
-    color: $primary_bleu-fonce;
-}
-.accl:hover{
-    color: rgb(87, 132, 160);
+@mixin lange{
+   
+    padding-left:10px;
+    padding-right: 10px;
+    background-color: transparent;
+    border-radius: 10px;
+    color: rgb(26,81,158); 
+    border: 1px solid rgb(26,81,158);
+    margin: 20px;
     font-size: 20px;
+    text-decoration: none;
+    outline: 0;
 }
 
-ul {
-    width: 10%;
-    height: auto;
-    list-style: none;
-    float: right;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: baseline;
-    font-size: 1.3vw;
-    margin-right: 20%;
-    margin-top: 1.5%;
+@mixin Conseil{
+    margin: 20px;
+    font-size: 26px;
+    text-decoration: none;
+    color: black;
+}
 
-    & li {
-        margin-right: 35%;
-        align-items: center;
-        & a {
-            text-decoration: none;
-            color: $primary_noir;
-            font-weight: 600;
+@mixin Acceil{
+    margin: 20px;
+    font-size: 26px;
+    text-decoration: none;
+    color: rgb(26,81,158);
+ }
 
-            & .imgMenu {
-                position: absolute;
-                width: 1.5;
-                height: auto;
-                border: 1px;
-                margin-left: 37px;
-                margin-top: 0.8%;
+*{
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    font-size: 16px;
+    font-family: 'Cairo',sans-serif;
+    font-weight: 700;
+    body{
+        header{
+        background-color: rgb(150,197,220);;
+        position: fixed;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        height: 100px;
+        background-image: url('../Design/Assets/SVG/Merged bar-1.svg');
+        padding: 10px;
+            div{
+            
+        #lange1{
+            @include lange;
+                }
+
+                .Conseil__header{
+                    @include Conseil;
+                }
+
+                .Acceil__header{
+                    @include Acceil;
+                }
+            }
+        }
+        
+        #general{ 
+            position: absolute;
+            top: 100px;
+            z-index: -10;
+            #section1{
+                width: 100%;
+                height: 160px;
+                background-color: #F4CF1B;
+                background-repeat: no-repeat;
+                background-size: 120%;
+                background-position-x: -40px;
+                text-align: center;
+                #p__section1{
+                    width: 100%;
+                    line-height: 30px;
+                    margin: auto;
+                    color: rgb(16,120,173);
+                    }
+            }
+            #section2{
+                padding: 20px;
+                display: flex;
+                justify-content: space-evenly;
+                #article1{
+                    #img__article1{
+                        width: 500px;
+                        width: 550px;
+                        margin: 10px;
+                    }    
+                }
+                #article2{
+                    padding: 20px;
+                    text-align: center;
+                    width: 550px;
+                    .h1__article2{
+                        color: rgb(16,120,173);
+                        font-size: 23px;
+                    }
+                    #p__article2{
+                        color: rgb(127,127,127);
+                        font-size: 21px;
+                        text-align: center;
+                        line-height: 40px;
+                    }
+                    #demarer{
+                        font-size: 23px;
+                        cursor: pointer;
+                        width: 500px;
+                        height: 45px;
+                        background-color: rgb(16,120,173);
+                        color: white;
+                        border-radius: 6px;
+                        border: none;
+                        outline: 0;
+                        margin: 10px;
+                    }
+                }
+            }
+            #section3{
+                width: 500px;
+                text-align: center;
+                margin: auto;
+                display: grid;
+                grid-template-columns: repeat(2,1fr);
+                grid-template-rows: repeat(3,1fr);
+                margin-bottom: 10px;
+                margin-top: 10px;
+                #h1__section3{
+                    margin: auto;
+                    color: rgb(16,120,173);
+                    font-size: 23px;
+                    grid-row: 1/2;
+                    grid-column: 1/3;
+                        }
+                        
+                    #img1__section3{
+                        grid-row: 2/3 ;
+                        grid-column: 1/2;
+                        }
+                        #img2__section3{
+                            grid-row: 2/3 ;    
+                            grid-column: 2/3 ;
+                        
+                        }
+                        #img3__section3{
+                            grid-row: 3/4;    
+                            grid-column: 1/2;
+                        
+                        }
+                        #img4__section3{
+                            grid-row: 3/4;
+                            grid-column: 2/3 ;
+                        
+                        }
+                    }
+        
+            #section4{
+                background-color: rgb(16,120,173);
+                padding: 20px;
+                h1{
+                font-size: 23px;
+                color: #dce7e7;
+                text-align: center;
+                }
+                div{
+                display: flex;
+                justify-content: space-around;
+                #article1__section4{
+                    font-size: 20px;
+                    color: white;
+                        span{
+                    font-size: 20px;
+                    color: black;
+                        }
+                    }
+                    #article2__section4{
+                        text-align: center;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        padding: 40px;
+                        #h21__article2{
+                            font-size: 20px;
+                            color: rgb(244,207,27);
+                        }
+                        #h22__article2{
+                            font-size: 20px;
+                            color: rgb(16,120,173);
+                            background-color: rgb(244,207,27);
+                            width: 200px;
+                            padding: 10px;
+                            border-radius: 6px; 
+                        }
+                        a{
+                            text-decoration: none;
+                            color: white;
+                            border-bottom: 1px solid rgb(244,207,27);
+                        }
+                    }
+                }
+            }
+            aside{
+                            text-align: center;
+                            padding: 10px;
+                            background-color: rgb(150,197,220);
+                h1{
+                            color: rgb(16,120,173);
+                } 
+                button{
+                            width: 400px;
+                            background-color: rgb(16,120,173);
+                            border: none;
+                            border-radius: 6px;
+                            color: white;
+                            cursor: pointer;
+                            outline: 0;
+                }
+            }
+            #footer1{
+                width: 100%;
+                display: grid;
+                height: 400px;
+                grid-template-columns: repeat(3,1fr);
+                grid-template-rows: repeat(2,1fr);
+                justify-content: center;
+                align-items: center;
+                #img__footer1{
+                    text-align: center;
+                    width: 100%;
+                    grid-row: 1/2;
+                    grid-column: 1/4;
+                }
+                #div1__footer1{
+                    text-align: center;
+                    grid-row: 2/3;
+                    grid-column: 1/2;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    #lange2{
+                        @include lange;
+                    }
+                    .Conseil__header{
+                        @include Conseil;
+                            
+                    }
+                    .Acceil__header{
+                        @include Acceil;
+                    }
+                }
+                #div2__footer1{
+                    text-align: center;
+                    line-height: 40px;
+                    grid-row: 2/3;
+                    grid-column: 2/3;
+                    #h21__div2__footer1{
+                        color: rgb(16,120,173);
+                        font-size: 20px;
+                    }
+                    .h22__div2__footer1{
+                        color: rgb(54,157,83);
+                        font-size: 20px;
+                    }
+                }
+                #p__footer1{
+                    grid-row: 2/3;
+                    grid-column: 3/4;
+                    width: 550px;
+                    margin: 10px;
+                    color: rgb(127,127,127) ;
+                    font-weight: 100px;
+                }
+            }
+            #footer2{
+                height: 60px;
+                background-image: url('../Design/Assets/png/En chiffres-30@2x.png');
+                background-repeat: no-repeat;
+                background-size: 100%;
             }
         }
     }
 }
-.covid{
-    border: 2px solid $primary_bleu-fonce;
-    border-radius: 10px;
-    padding: 0% 18%;
-    width: 87px;
-    height: 38px;
-}
-.covid:hover{
-    color: rgb(179, 201, 223);
-}
-.cons:hover{
-    color: rgb(48, 112, 145);
-    font-size: 20px;
-}
-.nav_discription {
-    background-color: $primary_jaune;
-    text-align: center;
-    padding: 10px 29%;
- }
-.nav_discription p {
-    color: $primary_bleu-fonce;
-    font-weight: 600;
-    line-height: 27px; 
-}
-/************* premiere section *************/
-.sec1 {
-    display: flex;
-    justify-content: center;
-}
-.sec1__bg {
-    padding: 20px;
-}
-.sec1__content {
-    padding: 20px;
-    text-align: center;
-}
-.sec1__content h1 {
-    font-size: 30px;
-    line-height: 35px;
-    color: $primary_bleu-fonce;
-    margin-bottom: 10px;
-}
-.sec__element{
-    margin-top: 10px;
-}
-    
-.sec1__content p {
-    font-size: 31px;
-    font-weight: bold;
-    line-height: 42px;
-    color: $primary_gris;
-    margin: 10px 94px;
-}
-.sec1__content button {
-    background-color: $primary_bleu-fonce;
-    border: none;
-    border-radius: 6px;
-    color: $primary_blanc;
-    width: 85%;
-    height: 50px;
-    font-size: 32px;
-    font-weight: bold; 
-}
-.sec1__content button:hover {
-     background-color: $primary_bleu-light; 
-}
-.symptome__para {
-    text-align: center;
-    font-size: 2rem;
-    margin-top: 5%;
-    color: $primary_bleu-fonce;
-}
-          
-.symptome__container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-          
-        .symptome__container--size {
-            width: 50%;
-            display: inline-block;
-            margin: 0 auto;
-            margin-top: 5%;
-            padding-bottom: 5%;
-            text-align: center; 
-        }
-          
-        .caption {
-            font-family: Cairo;
-            font-size: 1.5em;
-            font-weight: 900;
-        }
-          
-        .suggestions__title {
-            font-family: cairo;
-            font-size: 2.5em;
-            text-align: center;
-            color: $primary_bleu-fonce
-        }
-          
-        .caption {
-            display: block; 
-        }    
-/***************** deuxieme section******************/
-.genéral__title{
-    color: $primary_bleu-fonce;
-    font-size: 26px;
-    text-align: center;
-    margin-bottom: 1%;
-    margin-top: 30px;
-}
-.genéral__container{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        margin-right: 22%;
-        margin-left: 22%;
-}
-        
-        .p1{
-            font-size: 20px;
-            font-weight: bold;
-            padding-left: 140px;
-        }
-        .p2{
-            font-size: 20px;
-            font-weight: bold;
-            line-height: 25px;
-            margin-top: 36px;
-            padding-left: 35%;
-        
-        }
-        .p3, .p4{
-            font-size: 20px;
-            font-weight: bold;
-            line-height: 30px;
-            text-align: center;
-        }
-        
-        .img1{
-            width: 27%;
-            height: 51%;
-            padding-left: 36%;
-            margin-top: 30px;
-        }
-        .img2{
-            width: 23%;
-            height: 43%;
-            padding-left: 38%;
-        }
-/*******************troisieme section*******************/
 
-.sec3{
-    background-color: $primary_bleu-light;
-}
-.sec3__covid{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-}
-.sec3__title{
-    h1{
-        font-size: 33px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        color: $primary_blanc;
-        text-align: center;
-        margin-top: 25px;
-        padding-top: 20px;
-    }
-}
-    .sec3__text{
-        h3{
-            font-size: 26px;
-            font-family: serif;
-            margin-left: 50px;
-            margin-top: 15px;
-        }
-        h4{
-        color: $primary_blanc;
-        font-size: 22px;
-        margin-left: 50px;
-        margin-bottom: 30px;
-    }
-}
-.sec3__info{
-    margin-left: 45%;
-    line-height: 50px;
-    margin-top: 11%;
-
-.sec3__contact{
-    h2{
-    color: $primary_jaune;
-    margin-left: 10px;
-    }
-    button{
-    background-color: $primary_jaune;
-    width: 169px;
-    height: 55px;
-    border-color: $primary_jaune;
-    border: 1px;
-    border-radius: 4px;
-    }
-    a{
-        color: $primary_blanc;
-        font-size: 23px;
-        font-family: serif;
-    }
-}
-}
-/***************************quatrieme section*************************/
-.sec4{
-    background-color: #71b7da;
-    .sec4__contain{
-        text-align: center;
-        padding-top: 20px;
-        h2{
-            font-size: 25px;
-            font-family: serif;
-            color: $primary_bleu-fonce;
-        }
-    }
-    .sec4__icone{
-        margin-top: 15px;
-    }
-    .sec4__button{
-        color: $primary_blanc;
-        background-color: $primary_bleu-fonce;
-        height: 40px;
-        width: 40%;
-        cursor: pointer;
-        border: 1px;
-        border-color: $primary_bleu-fonce;
-        border-radius: 7px;
-        font-size: 20px;
-        margin-bottom: 24px;
-    }
-    .sec4__button:hover{
-        background-color: #71b7da;
-    }
-}
-/************************** footer***************************/
-.footer{
-    text-align: center;
-    background-color: $primary_blanc;
-    margin-top: 25px;
-    padding-bottom: 20px;
-    .footer__lg{
-        text-align: center;
-    }
-}
-.footer__list{
-    background-color:$primary_blanc;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    padding-top: 20px;
-    .footer__list__li{
-        line-height: 50px;
-        font-size: 40px;
-        margin-right: 60%;
-    .footer__list__fr{
-        width: 78px;
-    }
-    .footer__list__fr__ico{
-        margin-right: 87px;
-        margin-bottom: -52px;
-    }
-    .footer__list__li__acc{
-        color: $primary_bleu-fonce;
-    }
-    }
-    .footer__list__conct{
-        margin-top: 10px;
-        line-height: 42px;
-        font-size: 10px;
-        padding-right: 172px;
-        h2{
-            color: $primary_bleu-fonce;
-            font-size: 20px;
-        }
-        h3{
-            font-size: 13px;
-        }
-        .footer__list__conct__num{
-            font-size: 20px;
-            color: $primary_vert;
-        }
-        }
-    .footer__list__algo{
-        margin-top: 25px;
-        margin-right: 18px;
-        color: $primary_gris;
-    }
-}
-.fin-footer{
-    background-color: $primary_bleu-fonce;
-    padding-top: 40px;
-}
-
-    
-        
-    
-    
